# twitter-bookmark-processor

./: .gitignore  README.md  SPEC.md  pyproject.toml  ralph-progress.txt  ralph-prompt.md  requirements.txt  setup-macos.sh
.ralph/: state.md
data/: state.json
deploy/: com.mp3fbf.sync-brain.plist  com.mp3fbf.twitter-processor.plist  com.mp3fbf.twitter-webhook.plist  run-launchd-test.sh  run-processor.sh  run-webhook.sh  setup-launchd.sh  sync-brain.sh  test-op-launchd.sh
docs/: SPRINTS.md  configuration.md  ios-shortcut.md  skill-integration.md  twillot-schema.md
references/: README.md  kb_processor.py  twitter_reader.py  youtube_processor.py  yt_webhook_server.py
scripts/: enrich_notes.py  rerender_insights.py  reset_failed.py
src/: __init__.py  main.py  webhook_server.py
tests/: __init__.py  conftest.py  test_backlog_manager.py  test_bookmark.py  test_classifier.py  test_config.py  test_content_fetcher.py  test_deduplicator.py  test_exceptions.py  test_http_client.py  test_insight_capture.py  test_insight_distill.py  test_insight_models.py  test_insight_pipeline.py  test_integration.py  test_link_cache.py  test_link_processor.py  test_llm_client.py  test_llm_factory.py  test_logger.py  test_main.py  test_notifier.py  test_obsidian_writer.py  test_pipeline.py  test_processors_base.py  test_rate_limiter.py  test_retry.py  test_smart_prompts.py  test_state_manager.py  test_summary.py  test_thread_processor.py  test_tweet_processor.py  test_twillot_reader.py  test_video_processor.py  test_watcher.py  test_webhook_server.py  test_x_api_auth.py  (+1 more)
(+47 files in other folders)
